--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,21 +1,26 @@
-name: Laravel CI
+name: Laravel Tests
 
 on: [push]
 
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Generate APP_KEY
-        run: php artisan key:generate
-        env:
-        APP_KEY: base64:SomeGeneratedAppKey
-      - uses: actions/checkout@v3
-      - name: Install PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 8.2
-      - name: Install dependencies
-        run: composer install --no-progress --no-suggest --prefer-dist
-      - name: Run Tests
-        run: php artisan test
+    - uses: actions/checkout@v3
+
+    - name: Set up PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: 8.2
+
+    - name: Install dependencies
+      run: composer install --no-progress --no-suggest --prefer-dist
+
+    - name: Set environment
+      run: |
+        cp .env.example .env
+        php artisan key:generate
+
+    - name: Run tests
+      run: php artisan test
